--- a/package.json
+++ b/package.json
@@ -11,14 +11,32 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^17.3.1",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/localize": "^17.3.1",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ng-select/ng-select": "^12.0.7",
+    "@popperjs/core": "^2.11.8",
+    "@sweetalert2/ngx-sweetalert2": "^12.3.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-scss": "^5.3.3",
+    "date-fns": "^3.6.0",
+    "feather-icons": "^4.29.1",
+    "jquery": "^3.7.1",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-spinner": "^16.0.2",
+    "ngx-toastr": "^18.0.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -26,6 +44,7 @@
     "@angular-devkit/build-angular": "^16.2.3",
     "@angular/cli": "~16.2.3",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/feather-icons": "^4.29.4",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
